fixing mobile spacing on hero section v0.0.5

--- a/css/style.css
+++ b/css/style.css
@@ -659,7 +659,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 4.5rem;
 }
 
 @media only screen and (max-width: 767.99px), only screen and (min-width: 768px) and (max-width: 1198.99px) {
